[gd_scene load_steps=16 format=2]

[ext_resource path="res://OnClick/onClick3/spotDiff3.gd" type="Script" id=1]
[ext_resource path="res://OnClick/images/STDImg4.jpg" type="Texture" id=2]
[ext_resource path="res://OnClick/images/STDImg4.1.png" type="Texture" id=3]
[ext_resource path="res://OnClick/onClick3/diff1.gd" type="Script" id=4]
[ext_resource path="res://OnClick/images/red_circle.png" type="Texture" id=5]
[ext_resource path="res://OnClick/onClick3/Diff2.gd" type="Script" id=6]
[ext_resource path="res://OnClick/onClick3/Diff3.gd" type="Script" id=7]
[ext_resource path="res://OnClick/onClick3/Diff4.gd" type="Script" id=8]
[ext_resource path="res://OnClick/onClick3/Diff5.gd" type="Script" id=9]
[ext_resource path="res://OnClick/onClick3/Label.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 36.0555

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 31.6228

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 50 )

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 370 )
z_index = -10
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 640, -370 )
z_index = -10
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 760, -360 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 760, 380 )
shape = SubResource( 1 )

[node name="diff_1_a" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 760, -360 )
scale = Vector2( 0.314378, 0.335837 )
texture = ExtResource( 5 )

[node name="diff_1_b" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 760, 380 )
scale = Vector2( 0.314378, 0.335837 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 820, -400 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 810, 330 )
shape = SubResource( 2 )

[node name="diff_2_a" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 810, 330 )
scale = Vector2( 0.271459, 0.292918 )
texture = ExtResource( 5 )

[node name="diff_2_b" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 820, -399.125 )
scale = Vector2( 0.271459, 0.292918 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 210, 290 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 210, -450 )
shape = SubResource( 3 )

[node name="diff_3_a" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 210, -450 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="diff_3_b" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 210, 290 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 500, -440 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 480, 290 )
shape = SubResource( 4 )

[node name="diff_4_a" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 500, -440 )
scale = Vector2( 0.371245, 0.5 )
texture = ExtResource( 5 )

[node name="diff_4_b" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 480, 290 )
scale = Vector2( 0.371245, 0.5 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 380, -580 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 390, 150 )
shape = SubResource( 5 )

[node name="diff_5_a" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 380, -580 )
scale = Vector2( 0.378755, 0.378755 )
texture = ExtResource( 5 )

[node name="diff_5_b" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 390, 150 )
scale = Vector2( 0.378755, 0.378755 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 0 )
current = true
zoom = Vector2( 2, 4.1 )

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = -710.0
margin_right = 110.0
margin_bottom = -670.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.803922, 0.027451, 0.027451, 1 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Label"]
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="." method="_on_diff_1_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="Area2D" method="_on_diff_1_a_visibility_changed"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="." method="_on_diff_2_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="Area2D2" method="_on_diff_2_a_visibility_changed"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="." method="_on_diff_3_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="Area2D3" method="_on_diff_3_a_visibility_changed"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_Area2D4_input_event"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="." method="_on_diff_4_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="Area2D4" method="_on_diff_4_a_visibility_changed"]
[connection signal="input_event" from="Area2D5" to="Area2D5" method="_on_Area2D5_input_event"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="." method="_on_diff_5_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="Area2D5" method="_on_diff_5_a_visibility_changed"]
[connection signal="timeout" from="Label/Timer" to="Label" method="_on_Timer_timeout"]
[connection signal="timeout" from="Label/Timer" to="." method="_on_Timer_timeout"]
